afficher les modifications

--- a/index.html
+++ b/index.html
@@ -248,4 +248,23 @@
         <div class="card">
             <h3>Réseau d'entreprise</h3>
             <p>Création d'un réseau sécurisé pour une PME, configuration des VLAN et routage.</p>
-            <a href="https://
+            <a href="https://github.com/Maguettechou/projet-reseau" class="button">Voir sur GitHub</a>
+        </div>
+        <div class="card">
+            <h3>Installation d'un serveur Web</h3>
+            <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
+            <a href="https://github.com/Maguettechou/projet-serveur-web" class="button">Voir sur GitHub</a>
+        </div>
+        <div class="card">
+            <h3>Virtualisation</h3>
+            <p>Création d'un environnement virtuel pour tester différentes configurations serveur.</p>
+            <a href="https://github.com/Maguettechou/projet-virtualisation" class="button">Voir sur GitHub</a>
+        </div>
+    </div>
+</section>
+
+<!-- Contact -->
+<section id="contact">
+    <h2>Contact</h2>
+    <form action="mailto:maguette.diop@example.com" method="post" enctype="text/plain">
+        <
