--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de Maguette Diop - Étudiante en BTS SIO, passionnée par l'informatique, les réseaux et la sécurité.">
-    <meta name="keywords" content="portfolio, Maguette Diop, BTS SIO, développeur, réseaux, sécurité">
-    <meta name="author" content="Maguette Diop">
     <title>Portfolio de Maguette Diop</title>
     <style>
-        :root {
-            --primary-color: #1e2a47;
-            --secondary-color: #2d3e5f;
-            --highlight-color: #00bcd4;
-            --bg-color: #f0f0f0;
-            --text-color: #333;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: var(--bg-color);
-            color: var(--text-color);
+            background-color: #f0f0f0;
+            color: #333;
             line-height: 1.6;
         }
 
         header {
-            background-color: var(--primary-color);
+            background-color: #1e2a47; /* Bleu foncé */
             color: white;
             text-align: center;
             padding: 60px 20px;
@@ -46,7 +34,7 @@
         }
 
         nav {
-            background-color: var(--secondary-color);
+            background-color: #2d3e5f; /* Bleu moyen */
             color: white;
             display: flex;
             justify-content: center;
@@ -65,9 +53,8 @@
             padding: 10px 15px;
         }
 
-        nav a:hover,
-        nav a.active {
-            color: var(--highlight-color);
+        nav a:hover, nav a.active {
+            color: #00bcd4; /* Teinte cyan */
         }
 
         section {
@@ -79,7 +66,7 @@
 
         h2 {
             font-size: 2.5rem;
-            color: #2c3e50;
+            color: #2c3e50; /* Gris foncé */
             margin-bottom: 20px;
         }
 
@@ -94,9 +81,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s, opacity 0.3s;
-            opacity: 0;
-            animation: fadeIn 0.6s ease-in-out;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .card:hover {
@@ -106,165 +91,5 @@
 
         .card h3 {
             font-size: 1.8rem;
-            color: var(--primary-color);
-            margin-bottom: 15px;
-        }
-
-        .card p {
-            color: #7f8c8d;
-            font-size: 1rem;
-        }
-
-        footer {
-            background-color: var(--secondary-color);
-            color: white;
-            text-align: center;
-            padding: 15px;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        .button {
-            background-color: var(--highlight-color);
-            color: white;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 25px;
-            margin-top: 20px;
-            font-size: 1.1rem;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #0097a7;
-        }
-
-        @media screen and (max-width: 768px) {
-            .grid {
-                grid-template-columns: 1fr;
-            }
-
-            nav a {
-                margin: 0 10px;
-            }
-
-            header h1 {
-                font-size: 2.5rem;
-            }
-
-            .button {
-                width: 100%;
-                padding: 15px;
-            }
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-    </style>
-</head>
-
-<body>
-
-<header>
-    <h1>Portfolio de Maguette Diop</h1>
-    <p>Étudiante en BTS SIO, option SISR</p>
-</header>
-
-<!-- Menu de navigation -->
-<nav>
-    <a href="#about" class="nav-link">À propos</a>
-    <a href="#skills" class="nav-link">Compétences</a>
-    <a href="#projects" class="nav-link">Projets</a>
-    <a href="#contact" class="nav-link">Contact</a>
-</nav>
-
-<!-- À propos -->
-<section id="about">
-    <h2>À propos de moi</h2>
-    <img src="ton_image.jpg" alt="Maguette Diop" style="width: 150px; border-radius: 50%; margin-bottom: 20px;">
-    <p>
-        Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux). Passionnée par l'informatique depuis mon plus jeune âge, j'ai choisi de me spécialiser dans la gestion des infrastructures et des systèmes.
-    </p>
-    <p>
-        Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
-    </p>
-    <p>
-        Tout au long de ma formation, j'ai eu l'opportunité de travailler sur divers projets en groupe et individuels, ce qui m'a permis de développer des compétences techniques solides et d'améliorer ma capacité à résoudre des problèmes complexes. Je cherche constamment à apprendre, que ce soit à travers des cours, des tutoriels ou des projets personnels.
-    </p>
-    <p>
-        J'aspire à travailler dans un environnement stimulant où je pourrai mettre à profit mes compétences en administration système et réseaux pour contribuer au bon fonctionnement des infrastructures informatiques. Je suis convaincue que la technologie a le pouvoir de transformer les entreprises, et je souhaite faire partie de cette évolution.
-    </p>
-    <a href="#contact" class="button">Contactez-moi</a>
-</section>
-
-<!-- Compétences -->
-<section id="skills">
-    <h2>Mes compétences</h2>
-    <div class="grid">
-        <div class="card">
-            <h3>Administration des systèmes</h3>
-            <p>Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</p>
-        </div>
-        <div class="card">
-            <h3>Réseaux</h3>
-            <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
-        </div>
-        <div class="card">
-            <h3>Sécurité</h3>
-            <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
-        </div>
-        <div class="card">
-            <h3>Virtualisation</h3>
-            <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
-        </div>
-        <div class="card">
-            <h3>Bases de données</h3>
-            <p>Gestion des bases de données SQL, création et optimisation des requêtes.</p>
-        </div>
-        <div class="card">
-            <h3>Automatisation</h3>
-            <p>Automatisation des tâches administratives via PowerShell, Bash et Python.</p>
-        </div>
-    </div>
-</section>
-
-<!-- Projets -->
-<section id="projects">
-    <h2>Mes projets</h2>
-    <div class="grid">
-        <div class="card">
-            <h3>Réseau d'entreprise</h3>
-            <p>Création d'un réseau sécurisé pour une PME, configuration des VLAN et routage.</p>
-            <a href="https://github.com/Maguettechou/projet-reseau" class="button">Voir sur GitHub</a>
-        </div>
-        <div class="card">
-            <h3>Installation d'un serveur Web</h3>
-            <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
-            <a href="https://github.com/Maguettechou/projet-serveur-web" class="button">Voir sur GitHub</a>
-        </div>
-        <div class="card">
-            <h3>Virtualisation</h3>
-            <p>Création d'un environnement virtuel pour tester différentes configurations serveur.</p>
-            <a href="https://github.com/Maguettechou/projet-virtualisation" class="button">Voir sur GitHub</a>
-        </div>
-    </div>
-</section>
-
-<!-- Contact -->
-<section id="contact">
-    <h2>Contact</h2>
-    <form action="mailto:maguette.diop@example.com" method="post" enctype="text/plain">
-        <
+            color: #1e2a47; /* Bleu foncé */
+      
