--- a/index.html
+++ b/index.html
@@ -92,4 +92,156 @@
         .card h3 {
             font-size: 1.8rem;
             color: #1e2a47; /* Bleu foncé */
-      
+            margin-bottom: 15px;
+        }
+
+        .card p {
+            color: #7f8c8d; /* Gris clair */
+            font-size: 1rem;
+        }
+
+        footer {
+            background-color: #2d3e5f; /* Bleu moyen */
+            color: white;
+            text-align: center;
+            padding: 15px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        .button {
+            background-color: #00bcd4; /* Teinte cyan */
+            color: white;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 25px;
+            margin-top: 20px;
+            font-size: 1.1rem;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0097a7; /* Teinte cyan foncé */
+        }
+
+        @media screen and (max-width: 768px) {
+            .grid {
+                grid-template-columns: 1fr;
+            }
+
+            nav a {
+                margin: 0 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Portfolio de Maguette Diop</h1>
+    <p>Étudiante en BTS SIO, option SISR</p>
+</header>
+
+<!-- Menu de navigation -->
+<nav>
+    <a href="#about" class="nav-link">À propos</a>
+    <a href="#skills" class="nav-link">Compétences</a>
+    <a href="#projects" class="nav-link">Projets</a>
+    <a href="#contact" class="nav-link">Contact</a>
+</nav>
+
+<!-- À propos -->
+<section id="about">
+    <h2>À propos de moi</h2>
+    <p>
+        Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux). Passionnée par l'informatique depuis mon plus jeune âge, j'ai choisi de me spécialiser dans la gestion des infrastructures et des systèmes.
+    </p>
+    <p>
+        Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
+    </p>
+    <p>
+        Tout au long de ma formation, j'ai eu l'opportunité de travailler sur divers projets en groupe et individuels, ce qui m'a permis de développer des compétences techniques solides et d'améliorer ma capacité à résoudre des problèmes complexes. Je cherche constamment à apprendre, que ce soit à travers des cours, des tutoriels ou des projets personnels.
+    </p>
+    <p>
+        J'aspire à travailler dans un environnement stimulant où je pourrai mettre à profit mes compétences en administration système et réseaux pour contribuer au bon fonctionnement des infrastructures informatiques. Je suis convaincue que la technologie a le pouvoir de transformer les entreprises, et je souhaite faire partie de cette évolution.
+    </p>
+    <a href="#contact" class="button">Contactez-moi</a>
+</section>
+
+<!-- Compétences -->
+<section id="skills">
+    <h2>Mes compétences</h2>
+    <div class="grid">
+        <div class="card">
+            <h3>Administration des systèmes</h3>
+            <p>Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</p>
+        </div>
+        <div class="card">
+            <h3>Réseaux</h3>
+            <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
+        </div>
+        <div class="card">
+            <h3>Sécurité</h3>
+            <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
+        </div>
+        <div class="card">
+            <h3>Virtualisation</h3>
+            <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
+        </div>
+        <div class="card">
+            <h3>Bases de données</h3>
+            <p>Gestion des bases de données SQL, création et optimisation des requêtes.</p>
+        </div>
+        <div class="card">
+            <h3>Automatisation</h3>
+            <p>Automatisation des tâches administratives via PowerShell, Bash et Python.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Projets -->
+<section id="projects">
+    <h2>Mes projets</h2>
+    <div class="grid">
+        <div class="card">
+            <h3>Réseau d'entreprise</h3>
+            <p>Création d'un réseau sécurisé pour une PME, configuration des VLAN et routage.</p>
+        </div>
+        <div class="card">
+            <h3>Installation d'un serveur Web</h3>
+            <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
+        </div>
+        <div class="card">
+            <h3>Virtualisation</h3>
+            <p>Création d'un environnement virtuel pour tester différentes configurations serveur.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Contact -->
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:maguette.diop@example.com">maguette.diop@example.com</a></p>
+    <p>Vous pouvez aussi télécharger mon CV en cliquant sur le lien suivant :</p>
+    <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
+</section>
+
+<footer>
+    <p>&copy; 2025 Maguette Diop. Tous droits réservés.</p>
+</footer>
+
+<script>
+    // Gestion des liens de navigation
+    const navLinks = document.querySelectorAll('.nav-link');
+    navLinks.forEach(link => {
+        link.addEventListener('click', () => {
+            navLinks.forEach(link => link.classList.remove('active'));
+            link.classList.add('active');
+        });
+    });
+</script>
+
+</body>
+</html>
