Ajout des modifications

--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@
 
 <!-- Menu de navigation -->
 <nav>
-    <a href="#about" class="nav-link">À propos</a>
-    <a href="#skills" class="nav-link">Compétences</a>
-    <a href="#projects" class="nav-link">Projets</a>
+    <a href="#about" class="nav-link">À propos de moi</a>
+    <a href="#skills" class="nav-link">Mes Compétences</a>
+    <a href="#projects" class="nav-link">Mes Projets</a>
+    <a href="#certifications" class="nav-link">Mes Certifications</a>
     <a href="#contact" class="nav-link">Contact</a>
 </nav>
 
@@ -161,12 +162,8 @@
     <p>
         Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
     </p>
-    <p>
-        Tout au long de ma formation, j'ai eu l'opportunité de travailler sur divers projets en groupe et individuels, ce qui m'a permis de développer des compétences techniques solides et d'améliorer ma capacité à résoudre des problèmes complexes. Je cherche constamment à apprendre, que ce soit à travers des cours, des tutoriels ou des projets personnels.
-    </p>
-    <p>
-        J'aspire à travailler dans un environnement stimulant où je pourrai mettre à profit mes compétences en administration système et réseaux pour contribuer au bon fonctionnement des infrastructures informatiques. Je suis convaincue que la technologie a le pouvoir de transformer les entreprises, et je souhaite faire partie de cette évolution.
-    </p>
+  
+   
     <a href="#contact" class="button">Contactez-moi</a>
 </section>
 
@@ -220,11 +217,22 @@
     </div>
 </section>
 
+<!-- Certifications -->
+<section id="certifications">
+    <h2>Mes Certifications</h2>
+    <ul>
+        <li>Certification en Administration des Systèmes Linux</li>
+        <li>Certification Cisco CCNA en Réseaux</li>
+        <li>Certification en Sécurité Informatique et Réseaux</li>
+    </ul>
+</section>
+
 <!-- Contact -->
 <section id="contact">
     <h2>Contact</h2>
     <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:maguette.diop@example.com">maguette.diop@example.com</a></p>
     <p>Vous pouvez aussi télécharger mon CV en cliquant sur le lien suivant :</p>
+    <!-- Lien pour télécharger le CV -->
     <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
 </section>
 
