Ajout des modifications

--- a/index.html
+++ b/index.html
@@ -158,15 +158,13 @@
     <p>
         Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux). Passionnée par l'informatique depuis mon plus jeune âge, j'ai choisi de me spécialiser dans la gestion des infrastructures et des systèmes.
     </p>
-    <p>
-        Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
-    </p>
-    <p>
-        Tout au long de ma formation, j'ai eu l'opportunité de travailler sur divers projets en groupe et individuels, ce qui m'a permis de développer des compétences techniques solides et d'améliorer ma capacité à résoudre des problèmes complexes. Je cherche constamment à apprendre, que ce soit à travers des cours, des tutoriels ou des projets personnels.
-    </p>
-    <p>
-        J'aspire à travailler dans un environnement stimulant où je pourrai mettre à profit mes compétences en administration système et réseaux pour contribuer au bon fonctionnement des infrastructures informatiques. Je suis convaincue que la technologie a le pouvoir de transformer les entreprises, et je souhaite faire partie de cette évolution.
-    </p>
+
+    <p>Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.</p>
+
+    <!-- Téléchargement et consultation du CV -->
+    <p>Vous pouvez télécharger mon CV ou le consulter en ligne :</p>
+    <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
+    <a href="https://mon-cv-en-ligne.com" target="_blank" class="button">Consulter mon CV</a>
 </section>
 
 <!-- Compétences -->
@@ -223,13 +221,6 @@
 <section id="contact">
     <h2>Contact</h2>
     <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:maguette.diop@example.com">maguette.diop@example.com</a></p>
-    
-    <p>Vous pouvez aussi télécharger mon CV en cliquant sur le lien suivant :</p>
-    <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
-
-    <p>Ou bien consulter mon CV en ligne :</p>
-    <a href="https://mon-cv-en-ligne.com" target="_blank" class="button">Consulter mon CV</a>
-
     <a href="#about" class="button">Contactez-moi</a>
 </section>
 
