Ajout des modifications

--- a/index.html
+++ b/index.html
@@ -158,13 +158,11 @@
     <p>
         Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux). Passionnée par l'informatique depuis mon plus jeune âge, j'ai choisi de me spécialiser dans la gestion des infrastructures et des systèmes.
     </p>
-
-    <p>Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.</p>
-
-    <!-- Téléchargement et consultation du CV -->
-    <p>Vous pouvez télécharger mon CV ou le consulter en ligne :</p>
+    <p>
+        Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
+    </p>
+    <a href="#contact" class="button">Consulter mon CV</a>
     <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
-    <a href="https://mon-cv-en-ligne.com" target="_blank" class="button">Consulter mon CV</a>
 </section>
 
 <!-- Compétences -->
@@ -220,8 +218,8 @@
 <!-- Contact -->
 <section id="contact">
     <h2>Contact</h2>
-    <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:maguette.diop@example.com">maguette.diop@example.com</a></p>
-    <a href="#about" class="button">Contactez-moi</a>
+    <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></p>
+    <p>Vous pouvez aussi me joindre par téléphone au : <strong>0605584988</strong></p>
 </section>
 
 <footer>
