--- a/index.html
+++ b/index.html
@@ -4,238 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Maguette Diop</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: #1e2a47; /* Bleu foncé */
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            font-style: italic;
-            margin-top: 10px;
-        }
-
-        nav {
-            background-color: #2d3e5f; /* Bleu moyen */
-            color: white;
-            display: flex;
-            justify-content: center;
-            padding: 15px 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 1.1rem;
-            transition: color 0.3s;
-            padding: 10px 15px;
-        }
-
-        nav a:hover, nav a.active {
-            color: #00bcd4; /* Teinte cyan */
-        }
-
-        section {
-            padding: 80px 20px;
-            max-width: 1100px;
-            margin: auto;
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            color: #2c3e50; /* Gris foncé */
-            margin-bottom: 20px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
-        }
-
-        .card {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .card h3 {
-            font-size: 1.8rem;
-            color: #1e2a47; /* Bleu foncé */
-            margin-bottom: 15px;
-        }
-
-        .card p {
-            color: #7f8c8d; /* Gris clair */
-            font-size: 1rem;
-        }
-
-        footer {
-            background-color: #2d3e5f; /* Bleu moyen */
-            color: white;
-            text-align: center;
-            padding: 15px;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        .button {
-            background-color: #00bcd4; /* Teinte cyan */
-            color: white;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 25px;
-            margin-top: 20px;
-            font-size: 1.1rem;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #0097a7; /* Teinte cyan foncé */
-        }
-
-        @media screen and (max-width: 768px) {
-            .grid {
-                grid-template-columns: 1fr;
-            }
-
-            nav a {
-                margin: 0 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Bienvenue sur mon portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">À propos de moi</a></li>
+                <li><a href="#skills">Compétences</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#contact">Contactez-moi</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-    <h1>Portfolio de Maguette Diop</h1>
-    <p>Étudiante en BTS SIO, option SISR</p>
-</header>
+    <!-- À propos de moi -->
+    <section id="about">
+        <h2>À propos de moi</h2>
+        <p>Je m'appelle Maguette Diop, étudiante en première année de BTS SIO option SISR au lycée Notre-Dame de la Providence. Passionnée par l'informatique, je m'intéresse particulièrement aux infrastructures réseaux et systèmes.</p>
+        <p>Je suis déterminée à développer mes compétences et à construire une carrière dans ce domaine en pleine croissance.</p>
+        <div class="buttons">
+            <a href="mon_cv.pdf" class="button" download>Télécharger mon CV</a>
+            <a href="mon_cv.pdf" class="button" target="_blank">Consulter mon CV</a>
+        </div>
+    </section>
 
-<!-- Menu de navigation -->
-<nav>
-    <a href="#about" class="nav-link">À propos</a>
-    <a href="#skills" class="nav-link">Compétences</a>
-    <a href="#projects" class="nav-link">Projets</a>
-    <a href="#contact" class="nav-link">Contact</a>
-</nav>
+    <!-- Compétences -->
+    <section id="skills">
+        <h2>Mes compétences</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Administration des systèmes</h3>
+                <p>Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</p>
+            </div>
+            <div class="card">
+                <h3>Réseaux</h3>
+                <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
+            </div>
+            <div class="card">
+                <h3>Sécurité</h3>
+                <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
+            </div>
+            <div class="card">
+                <h3>Virtualisation</h3>
+                <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
+            </div>
+            <div class="card">
+                <h3>Bases de données</h3>
+                <p>Gestion des bases de données SQL, création et optimisation des requêtes.</p>
+            </div>
+            <div class="card">
+                <h3>Automatisation</h3>
+                <p>Automatisation des tâches administratives via PowerShell, Bash et Python.</p>
+            </div>
+        </div>
+    </section>
 
-<!-- À propos -->
-<section id="about">
-    <h2>À propos de moi</h2>
-    <p>
-        Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux). Passionnée par l'informatique depuis mon plus jeune âge, j'ai choisi de me spécialiser dans la gestion des infrastructures et des systèmes.
-    </p>
-    <p>
-        Curieuse et toujours en quête de nouvelles connaissances, je suis particulièrement attirée par l'administration des réseaux, la sécurité informatique et la gestion des systèmes d'exploitation. Mon objectif est de devenir une experte dans ces domaines et d'acquérir les compétences nécessaires pour optimiser les infrastructures IT dans le monde professionnel.
-    </p>
-    <a href="#contact" class="button">Consulter mon CV</a>
-    <a href="cv-maguette-diop.pdf" download class="button">Télécharger mon CV</a>
-</section>
+    <!-- Certifications -->
+    <section id="certifications">
+        <h2>Mes certifications</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>PIX</h3>
+                <p>Certification en compétences numériques reconnue par l'État français.</p>
+            </div>
+            <div class="card">
+                <h3>SecNumAcadémie</h3>
+                <p>Formation en cybersécurité délivrée par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information).</p>
+            </div>
+        </div>
+    </section>
 
-<!-- Compétences -->
-<section id="skills">
-    <h2>Mes compétences</h2>
-    <div class="grid">
-        <div class="card">
-            <h3>Administration des systèmes</h3>
-            <p>Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</p>
+    <!-- Projets -->
+    <section id="projects">
+        <h2>Mes projets</h2>
+        <p>Voici quelques projets que j'ai réalisés au cours de ma formation :</p>
+        <div class="grid">
+            <div class="card">
+                <h3>Projet 1</h3>
+                <p>Réalisation d'un serveur web sécurisé sous Linux.</p>
+            </div>
+            <div class="card">
+                <h3>Projet 2</h3>
+                <p>Mise en place d'une architecture réseau virtuelle avec VirtualBox.</p>
+            </div>
         </div>
-        <div class="card">
-            <h3>Réseaux</h3>
-            <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
-        </div>
-        <div class="card">
-            <h3>Sécurité</h3>
-            <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
-        </div>
-        <div class="card">
-            <h3>Virtualisation</h3>
-            <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
-        </div>
-        <div class="card">
-            <h3>Bases de données</h3>
-            <p>Gestion des bases de données SQL, création et optimisation des requêtes.</p>
-        </div>
-        <div class="card">
-            <h3>Automatisation</h3>
-            <p>Automatisation des tâches administratives via PowerShell, Bash et Python.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- Projets -->
-<section id="projects">
-    <h2>Mes projets</h2>
-    <div class="grid">
-        <div class="card">
-            <h3>Réseau d'entreprise</h3>
-            <p>Création d'un réseau sécurisé pour une PME, configuration des VLAN et routage.</p>
-        </div>
-        <div class="card">
-            <h3>Installation d'un serveur Web</h3>
-            <p>Installation d'un serveur Apache et mise en place d'un site dynamique avec base de données MySQL.</p>
-        </div>
-        <div class="card">
-            <h3>Virtualisation</h3>
-            <p>Création d'un environnement virtuel pour tester différentes configurations serveur.</p>
-        </div>
-    </div>
-</section>
+    <!-- Contact -->
+    <section id="contact">
+        <h2>Contactez-moi</h2>
+        <p>Vous pouvez me contacter via :</p>
+        <ul>
+            <li>Email : <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></li>
+            <li>Téléphone : <a href="tel:+33605584988">06 05 58 49 88</a></li>
+        </ul>
+    </section>
 
-<!-- Contact -->
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Pour toute question ou collaboration, n'hésitez pas à me contacter par email : <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></p>
-    <p>Vous pouvez aussi me joindre par téléphone au : <strong>0605584988</strong></p>
-</section>
-
-<footer>
-    <p>&copy; 2025 Maguette Diop. Tous droits réservés.</p>
-</footer>
-
-<script>
-    // Gestion des liens de navigation
-    const navLinks = document.querySelectorAll('.nav-link');
-    navLinks.forEach(link => {
-        link.addEventListener('click', () => {
-            navLinks.forEach(link => link.classList.remove('active'));
-            link.classList.add('active');
-        });
-    });
-</script>
-
+    <footer>
+        <p>© 2025 Maguette Diop. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
