--- a/index.html
+++ b/index.html
@@ -4,9 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Maguette Diop</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Style général pour la page */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        /* Style pour le header */
+        header {
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        header nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        header nav ul li {
+            margin: 0 15px;
+        }
+
+        header nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+
+        header nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        /* Style pour les sections */
+        section {
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 900px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        section p, section ul {
+            font-size: 1.1em;
+        }
+
+        /* Style pour les boutons */
+        .buttons .button {
+            display: inline-block;
+            margin: 10px 5px;
+            padding: 10px 15px;
+            background: #007BFF;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        .buttons .button:hover {
+            background: #0056b3;
+        }
+
+        /* Style pour le footer */
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #333;
+            color: #fff;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+
     <header>
         <h1>Bienvenue sur mon portfolio</h1>
         <nav>
@@ -20,91 +110,56 @@
         </nav>
     </header>
 
-    <!-- À propos de moi -->
     <section id="about">
         <h2>À propos de moi</h2>
         <p>Je m'appelle Maguette Diop, étudiante en première année de BTS SIO option SISR au lycée Notre-Dame de la Providence. Passionnée par l'informatique, je m'intéresse particulièrement aux infrastructures réseaux et systèmes.</p>
         <p>Je suis déterminée à développer mes compétences et à construire une carrière dans ce domaine en pleine croissance.</p>
         <div class="buttons">
-            <a href="mon_cv.pdf" class="button" download>Télécharger mon CV</a>
-            <a href="mon_cv.pdf" class="button" target="_blank">Consulter mon CV</a>
+            <a href="cv.pdf" download class="button">Télécharger mon CV</a>
+            <a href="cv.pdf" target="_blank" class="button">Consulter mon CV</a>
         </div>
     </section>
 
-    <!-- Compétences -->
     <section id="skills">
         <h2>Mes compétences</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>Administration des systèmes</h3>
-                <p>Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</p>
-            </div>
-            <div class="card">
-                <h3>Réseaux</h3>
-                <p>Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</p>
-            </div>
-            <div class="card">
-                <h3>Sécurité</h3>
-                <p>Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</p>
-            </div>
-            <div class="card">
-                <h3>Virtualisation</h3>
-                <p>Création et gestion d'environnements virtuels avec VMware et VirtualBox.</p>
-            </div>
-            <div class="card">
-                <h3>Bases de données</h3>
-                <p>Gestion des bases de données SQL, création et optimisation des requêtes.</p>
-            </div>
-            <div class="card">
-                <h3>Automatisation</h3>
-                <p>Automatisation des tâches administratives via PowerShell, Bash et Python.</p>
-            </div>
-        </div>
+        <ul>
+            <li><strong>Administration des systèmes :</strong> Installation, configuration et gestion des systèmes d'exploitation (Linux, Windows Server).</li>
+            <li><strong>Réseaux :</strong> Configuration des réseaux locaux (LAN), gestion des VLAN et mise en place de la sécurité.</li>
+            <li><strong>Sécurité :</strong> Mise en place de solutions de sécurité des systèmes, gestion des pare-feu et des accès utilisateurs.</li>
+            <li><strong>Virtualisation :</strong> Création et gestion d'environnements virtuels avec VMware et VirtualBox.</li>
+            <li><strong>Bases de données :</strong> Gestion des bases de données SQL, création et optimisation des requêtes.</li>
+            <li><strong>Automatisation :</strong> Automatisation des tâches administratives via PowerShell, Bash et Python.</li>
+        </ul>
     </section>
 
-    <!-- Certifications -->
     <section id="certifications">
         <h2>Mes certifications</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>PIX</h3>
-                <p>Certification en compétences numériques reconnue par l'État français.</p>
-            </div>
-            <div class="card">
-                <h3>SecNumAcadémie</h3>
-                <p>Formation en cybersécurité délivrée par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information).</p>
-            </div>
-        </div>
+        <ul>
+            <li><strong>PIX :</strong> Certification en compétences numériques reconnue par l'État français.</li>
+            <li><strong>SecNumAcadémie :</strong> Formation en cybersécurité délivrée par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information).</li>
+        </ul>
     </section>
 
-    <!-- Projets -->
     <section id="projects">
         <h2>Mes projets</h2>
-        <p>Voici quelques projets que j'ai réalisés au cours de ma formation :</p>
-        <div class="grid">
-            <div class="card">
-                <h3>Projet 1</h3>
-                <p>Réalisation d'un serveur web sécurisé sous Linux.</p>
-            </div>
-            <div class="card">
-                <h3>Projet 2</h3>
-                <p>Mise en place d'une architecture réseau virtuelle avec VirtualBox.</p>
-            </div>
-        </div>
+        <ul>
+            <li><strong>Projet 1 :</strong> Réalisation d'un serveur web sécurisé sous Linux.</li>
+            <li><strong>Projet 2 :</strong> Mise en place d'une architecture réseau virtuelle avec VirtualBox.</li>
+        </ul>
     </section>
 
-    <!-- Contact -->
     <section id="contact">
         <h2>Contactez-moi</h2>
         <p>Vous pouvez me contacter via :</p>
         <ul>
-            <li>Email : <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></li>
-            <li>Téléphone : <a href="tel:+33605584988">06 05 58 49 88</a></li>
+            <li><strong>Email :</strong> <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></li>
+            <li><strong>Téléphone :</strong> 06 05 58 49 88</li>
         </ul>
     </section>
 
     <footer>
         <p>© 2025 Maguette Diop. Tous droits réservés.</p>
     </footer>
+
 </body>
 </html>
