Ajout des modifications manquantes

--- a/index.html
+++ b/index.html
@@ -195,6 +195,21 @@
         </div>
     </div>
 </section>
+<!-- Certifications -->
+<section id="certifications">
+    <h2>Certifications</h2>
+    <div class="grid">
+        <div class="card">
+            <h3>PIX</h3>
+            <p>Certification sur les compétences numériques, validant mes connaissances en matière de sécurité, programmation, et collaboration en ligne.</p>
+        </div>
+        <div class="card">
+            <h3>SecNumAcadémie</h3>
+            <p>Certification délivrée par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information), attestant mes compétences en cybersécurité.</p>
+        </div>
+    </div>
+</section>
+
 
 <!-- Projets -->
 <section id="projects">
