Ajout des modifications manquantes

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <nav>
     <a href="#about" class="nav-link">À propos</a>
     <a href="#skills" class="nav-link">Compétences</a>
+    <a href="#certifications" class="nav-link">Certifications</a>
     <a href="#projects" class="nav-link">Projets</a>
     <a href="#contact" class="nav-link">Contact</a>
 </nav>
@@ -195,21 +196,21 @@
         </div>
     </div>
 </section>
+
 <!-- Certifications -->
 <section id="certifications">
-    <h2>Certifications</h2>
+    <h2>Mes Certifications</h2>
     <div class="grid">
         <div class="card">
             <h3>PIX</h3>
-            <p>Certification sur les compétences numériques, validant mes connaissances en matière de sécurité, programmation, et collaboration en ligne.</p>
+            <p>Certification PIX, validant mes compétences en numérique dans divers domaines de l'informatique.</p>
         </div>
         <div class="card">
-            <h3>SecNumAcadémie</h3>
-            <p>Certification délivrée par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information), attestant mes compétences en cybersécurité.</p>
+            <h3>SecNumAcademie</h3>
+            <p>Certification SecNumAcademie, pour prouver mes compétences en cybersécurité.</p>
         </div>
     </div>
 </section>
-
 
 <!-- Projets -->
 <section id="projects">
